# npsr-car

./: CMakeLists.txt  LICENSE  Makefile
esp32/: sdkconfig
esp32/main/: Kconfig.projbuild  bluetooth_le.c  nmea_parser.c  screen.c
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/npsrcar/: MainActivity.kt
flutter/android/app/src/profile/: AndroidManifest.xml
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/: utils.dart
flutter/lib/src/ble/: ble_device_connector.dart  ble_scanner.dart  ble_status_monitor.dart
flutter/lib/src/ui/: device_list.dart
flutter/lib/src/ui/device_detail/: characteristic_interaction_dialog.dart  device_detail_screen.dart  device_interaction_tab.dart  device_log_tab.dart
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
main/: CMakeLists.txt  bluetooth_le.c  car_remote.c  gps.c  npsr_car.c  u8g2_esp32_hal.c
main/include/: npsr_car.h
