idf_component_register(SRCS "car_remote.c" "npsr_car.c"
                            "u8g2_esp32_hal.c"
                            "nmea_parser.c"
                            "bluetooth_le.c"
                            "screen.c"
                            "gps.c"
                            "car_remote.c"
                    INCLUDE_DIRS "include"
                                 "../components/u8g2/csrc")
